--- a/client/src/components/Home/Home.scss
+++ b/client/src/components/Home/Home.scss
@@ -34,47 +34,171 @@
                 }
             }
             .section-img {
+                width: 700px;
+                height: 100%;
                 justify-content: flex-end;
                 right: 0;
-                padding: 0;
+                padding: 30px 0;
                 margin: 0;
                 img {
-                    width: 750px;
-                    height: calc(100vh - 100px);
+                    width: 700px;
+                    // height: calc(100vh - 100px);
                 }
             }
         }
 
-        .location-banner {
+        .about-banner {
             display: flex;
-            flex-direction: column;
+            flex-direction: row;
             padding: 0;
             margin: 0;
-            height: calc(100vh - 100px);
-            .section-title-location {
+            height: 60vh;
+            .section-title-about {
                 display:flex;
-                width: 100%;
+                flex-direction: column;
+                width: 1200px;
                 bottom: 0;
                 justify-content: center;
                 align-items: center;
+                padding: 20px 60px;
+                .title {
+                    width: 100%;
+                    h1 {
+                        text-transform: capitalize;
+                        font-size: 30px;
+                        background: linear-gradient(to bottom right, #137DC5, #137DC5);
+                        -webkit-background-clip: text;
+                        -webkit-text-fill-color: transparent;
+                        font-weight: 400;
+                    }
+                }
+                .desc {
+                    padding-top: 20px;
+                    p{
+                        font-size: 18px;
+                    }
+                }
+                
+            }
+            .section-content {
+                display: flex;
+                align-content: center;
+                justify-content: center;
+                width: 100%;
+                height: 100%;
+                background: #cfe5f3;
+                .video {
+                    display: flex;
+                    align-content: center;
+                    justify-content: center;
+                    width: 100%;
+                    height: 100%;
+                    background-color: #cfe5f3;
+                    img {
+                        padding-top: 60px;
+                        width: 600px;
+                        height: 400px;
+                    }
+                }
+            }
+        }
+
+        .keyBenefits-banner {
+            display: flex;
+            flex-direction: column;
+            width: 80%;
+            height: 100%;
+            padding: 100px 0;
+            .section-title-kb {
+                padding-left: 50px;
                 h1 {
                     text-transform: capitalize;
-                    font-size: 40px;
+                    font-size: 25px;
                     background: linear-gradient(to bottom right, #137DC5, #137DC5);
                     -webkit-background-clip: text;
                     -webkit-text-fill-color: transparent;
+                    font-weight: 700;
                 }
             }
-            .section-map {
-                justify-content: flex-end;
-                right: 0;
-                padding: 0;
-                margin: 0;
-                img {
-                    width: 750px;
-                    height: calc(100vh - 100px);
+            .section-content {
+                display: flex;
+                flex-direction: row;
+                justify-content: center;
+                align-items: center;
+                padding-left: 150px;
+                padding-top: 50px;
+                width: 100%;
+                .benefit {
+                    border-color: #f4f4f6;
+                    background-color: #f4f4f6;
+                    border-radius: 30px;
+                    border-width: 20px;
+                    padding: 30px;
+                    margin-right: 40px;
+                    height: 250px;
+                    .icon {
+                        font-size: 50px;
+                    }
+                    h1 {
+                        font-size: 20px;
+                        background: linear-gradient(to bottom right, #137DC5, #137DC5);
+                        -webkit-background-clip: text;
+                        -webkit-text-fill-color: transparent;
+                    }
+                    p {
+                        font-size: 16px;
+                    }
                 }
             }
+        }
+        .signup-banner {
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            align-items: center;
+            padding-left: 300px;
+            // padding-right: 500px;
+            padding: 20px;
+            padding-top: 50px;
+            width: 100%;
+            background: #f7f7f8;
+            .section-title-su {
+                padding-left: 30px;
+                width: 80%;
+                .title {
+                    h1 {
+                        font-size: 20px;
+                        background: linear-gradient(to bottom right, #137DC5, #137DC5);
+                        -webkit-background-clip: text;
+                        -webkit-text-fill-color: transparent;
+                    }
+                }
+                .desc {
+                    p {
+                        font-size: 18px;
+                    }
+                }
+                
+            }
+            .cta {
+                font-size: 14px;
+                font-weight: 600;
+                text-transform: uppercase;
+                cursor: pointer;
+                background-color: #000035;
+                border-color: #000035;
+                color: white;
+                padding: 15px 30px;
+                border-radius: 30px;
+            }
+            // .section-content-su {
+            //     height: 200px;
+            //     margin-bottom: 50px;
+            //     img {
+            //         height: 200px;
+            //         width: 400px;
+            //     }
+            // }
         }
     }
 }
