--- a/client/src/components/Summary/Summary.scss
+++ b/client/src/components/Summary/Summary.scss
@@ -1,7 +1,7 @@
 @import "../../css-config/mixins.scss";
 @import "../../css-config/mixins.scss";
 
-.main-content-dash {
+.sum-content {
     padding: 20px 0;
     position: relative;
     background-color: white;
