--- a/client/src/components/Dashboard/Dashboard.scss
+++ b/client/src/components/Dashboard/Dashboard.scss
@@ -66,6 +66,10 @@
                 justify-content: space-between;
                 align-items: center;
                 width: 100%;
+                h1{
+                    font-size: 15px;
+                    font-weight: 500;
+                }
                 .row {
                     display: flex;
                     flex-direction: row;
