--- a/client/src/components/Dashboard/Dashboard.scss
+++ b/client/src/components/Dashboard/Dashboard.scss
@@ -112,6 +112,8 @@
                         .skills{
                             display: flex;
                             flex-direction: row;
+                            justify-content: center;
+                            align-items: center;
                             .skill-title{
                                 h2{
                                     font-size: 14px;
