--- a/client/src/components/Dashboard/Dashboard.scss
+++ b/client/src/components/Dashboard/Dashboard.scss
@@ -79,7 +79,7 @@
                     &.v1 {
                         padding-bottom: 50px;
                     }
-                    .widget {
+                    .widget1 {
                         display:flex;
                         flex-direction: column;
                         justify-content: center;
